# kitchen_garden

./: README.md
IM_LITERALLY_DEAD/: readme.md
IM_LITERALLY_DEAD/client/: CMakeLists.txt  CoFarmer.cpp  CoFarmer.h  Game.cpp  Game.h  Network.cpp  Network.h  Player.cpp  Player.h  main.cpp
IM_LITERALLY_DEAD/server/: Player.cpp  Player.h  Server.cpp  Server.h  main.cpp
MapWidget/: CMakeLists.txt  MapWidget.cpp  MapWidget.h  main.cpp
QT/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  playstart.cpp  playstart.h  playstart.ui  resources.qrc
dirname/: aboba.cpp
draft/deshur/: Menu.cpp  Player.cpp  Player.h  View.h  main.cpp
keep it simple stupid/: BaseElem.cpp  BaseElem.h  BaseStruct.h  CMakeLists.txt  Chat.cpp  Map.cpp  Menu.cpp  OnlineChat.cpp  Player.cpp  Player.h  Shop.cpp  Text.cpp  TextElem.cpp  client.cpp  cmake-build-debug.7z  main.cpp  server.cpp
keep it simple stupid/client/: CMakeLists.txt  MultiplayerProject_Client.cpp  NetworkClient.cpp  NetworkClient.h
keep it simple stupid/libpqxx/include/pqxx/: config-public-compiler.h  pqxx
keep it simple stupid/libpqxx/lib/cmake/libpqxx/: libpqxx-targets-noconfig.cmake  libpqxx-targets.cmake
keep it simple stupid/libpqxx/lib/pkgconfig/: libpqxx.pc
keep it simple stupid/mysql_connector_cpp_1_0_0_preview/mysql-connector-c++-1.0.5/: CMakeLists.txt
keep it simple stupid/mysql_connector_cpp_1_0_0_preview/mysql-connector-c++-1.0.5/test/CJUnitTestsPort/: CMakeLists.txt  sql.properties
keep it simple stupid/mysql_connector_cpp_1_0_0_preview/mysql-connector-c++-1.0.5/test/CJUnitTestsPort/java2cpp/: README  namesMap.txt
keep it simple stupid/mysql_connector_cpp_1_0_0_preview/mysql-connector-c++-1.0.5/test/framework/: CMakeLists.txt
keep it simple stupid/mysql_connector_cpp_1_0_0_preview/mysql-connector-c++-1.0.5/test/unit/: CMakeLists.txt  unit_fixture.cpp
keep it simple stupid/mysql_connector_cpp_1_0_0_preview/mysql-connector-c++-1.0.5/win/: CMakeLists.txt  mysql-conncpp-msi-template.xml.in  mysql-conncpp-msi-ui.xml
keep it simple stupid/mysql_connector_cpp_1_0_0_preview/mysql-connector-c++-1.0.5/win/registration/: register.htm
keep it simple stupid/mysql_connector_cpp_1_0_0_preview/mysql-connector-c++-1.0.5/win/releasedXml/: mysql-conncpp-msi-template.Intel.xml  mysql-conncpp-msi-template.x64.xml
keep it simple stupid/set/: CMakeLists.txt  test.cpp
offline/: BaseElem.cpp  CMakeLists.txt  Map.cpp  Menu.cpp  Shop.cpp  TextElem.cpp  TextElem.h  main.cpp
online/: readme.md
online/client/: BaseStruct.h  CMakeLists.txt  Chat.cpp  CoFarmer.h  Game.cpp  Game.h  Map.cpp  Network.cpp  Network.h  Player.cpp  Shop.cpp  TextElem.cpp  TextElem.h  View.h  menu.cpp  menu.h
papochka/: CMakeLists.txt  readme.md  test.cpp  test_cli.cpp  test_ser.cpp
sfml/001/: CMakeLists.txt
(+26 files in other folders)
